@@ -8,6 +8,11 @@ ikiwiki (3.11) UNRELEASED; urgency=low
     Closes: #520015
   * websetup: If setup fails, restore old setup file.
   * relativedate: Deal with clock skew.
+  * Add IkiWiki::ErrorReason objects, and modify pagespecs to return
+    them in cases where they fail to match due to a configuration or syntax
+    error.
+  * inline: Display a handy error message if the inline cannot display any
+    pages due to such an error.
 
  -- Joey Hess <joeyh@debian.org>  Tue, 21 Apr 2009 21:41:38 -0400
 
